# music-recommendation-spotify

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.next.yml  next.config.js  package-lock.json  package.json  test_spotify_api.py  tsconfig.json
.claude/: settings.local.json
app/: globals.css  layout.tsx  page.tsx
app/api/auth/profile/: route.ts
app/api/auth/refresh/: route.ts
app/api/auth/signout/: route.ts
app/api/auth/start/: route.ts
app/api/auth/token/: route.ts
app/api/health/: route.ts
app/api/recommend/: route.ts
app/callback/: callback-client.tsx  page.tsx
app/components/: HomeClient.tsx
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: health.py  recommend.py
backend/app/cache/: redis.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: recommend.py
backend/app/services/: features.py  index.py  realtime_recommender.py  recommendations.py
backend/app/spotify/: client.py  parsing.py
backend/tests/: test_demo_response.py  test_parsing.py  test_recommendations.py
docs/: ARCHITECTURE.md
lib/: demo.ts  recommender.ts  server-auth.ts  spotify.ts
