[project]
name = "spotify_rec_backend"
version = "0.1.0"
description = "FastAPI backend for Spotify recommendation engine"
authors = [{ name = "Spotify Rec" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "tenacity>=8.3",
  "orjson>=3.10",
  "python-json-logger>=2.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "librosa>=0.10",
  "soundfile>=0.12",
  "aiofiles>=24.1",
  "pyjwt[crypto]>=2.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx[cli]>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-redis",
  "types-requests"
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"